@@ -18,12 +18,7 @@
 
 #include <float.h>
 
-// Vitaly: there are problems with NEW TESSELATOR therefore USE_NEW_TESSELATOR is commented
-//	1. Memory leaks
-//	2. Arises	assert(vi2 != vi0) in file "ear_clip_triangulate_impl.h", line 982
-//	while playing some files with static text on dual processor mashine
-//	#define USE_NEW_TESSELATOR
-
+#define USE_NEW_TESSELATOR
 
 //#define DEBUG_DISPLAY_SHAPE_PATHS
 #ifdef DEBUG_DISPLAY_SHAPE_PATHS
@@ -31,9 +26,7 @@
 	bool	gameswf_debug_show_paths = false;
 #endif // DEBUG_DISPLAY_SHAPE_PATHS
 
-
 extern bool gameswf_tesselate_dump_shape;
-
 
 namespace gameswf
 {
